added EC2 User Data

--- a/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
+++ b/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
@@ -1,12 +1,40 @@
 # **EC2 SECTION**
 
-1. EC2 is one of the most popular of AWS's offering.
-2. EC2 = Elastic Compute Cloud = Infrastructure as a Service.
+1. **EC2** is one of the most popular of AWS's offering.
+2. **EC2** = Elastic Compute Cloud = Infrastructure as a Service.
 3. It mainly consist in the capability of :
 
-   - Renting Virtual Machones (EC2)
+   - Renting Virtual Machines (EC2)
    - Storing data on virtual drives (EBS)
    - Distributing load across machines (ELB)
    - Scaling the services using an auto-scaling group (ASG)
 
 4. Knowing EC2 is fundamental to understand how the Cloud works.
+
+# **EC2 sizing & configuration options**
+
+1. Operating System (OS) : Linux, Windows or Mac OS.
+2. How much compute power & core (CPU).
+3. How much random-access memory (RAM)
+4. How much storage space :
+   - Network-attached (EBS & EFS)
+   - Hardware (EC2 Instance Store)
+5. Network card: Speed of the card, Public IP address.
+6. Firewall rules : Security group
+7. Bootstrap script (configure at first launch) : EC2 User Data
+
+# **EC2 User Data**
+
+1. It is posible to bootstrap our instances using an EC2 User Data script.
+2. bootstrapping meas launching commands when a machine starts.
+3. That script is only run once at the instance first start.
+4. EC2 user data is used to automate boot tasks suchs as:
+
+   - Installing Updates.
+   - Installing Software.
+   - Downloading common files from the internet.
+   - Anything you can think of.
+
+5. The EC2 User Data Script runs with the root user.
+
+NOTE: t2.micro is part of the AWS free tier (up to 750 hours per month)
