added A new instance with EC2

--- a/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
+++ b/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
@@ -38,3 +38,60 @@
 5. The EC2 User Data Script runs with the root user.
 
 NOTE: t2.micro is part of the AWS free tier (up to 750 hours per month)
+
+# **HANDS - ON: LAUNCHING AN EC2 INSTANCE RUNNING LINUX**
+
+NOTE:
+
+1.  Instances => Launch Instances.
+
+    Step 1 : Choose an Amazon Machine Image (AMI)
+
+         - Quick Start
+         - My AMIs
+         - AWS MarketPlace
+         - Community AMIs
+
+    Step 1.1 : Choose Quick Start.
+
+         - Amazon Linux (Free tier elegible). ==>  (Select)
+
+    Step 2 : Choose an Instance Type.
+
+         - Select : t2 t2.micro 1 1 EBS only - Low to Moderate Yes.
+
+    Step 3 : Configure Instance Details.
+
+         - Modified only = User data
+         - This EC2 user data is a script that will be launched during the very and only first boot of  the isntance.
+         - Paste the script :
+
+            yum update -y
+            yum install -y httpd
+            systemctl start httpd
+            systemctl enable httpd
+            echo "<h1>Hello World from $(hostoma -f)</h1>">
+            /var/www/html/index.html
+
+    Step 4 : Add Storage = how much data's disk is going to be available on our EC2 instance.
+
+         - Default parameters.
+
+    Step 5 : Add Tags
+
+         -Name My first Instance
+
+    Step 6 : Configure Security Group
+
+         - Create a new security group.
+         - Add Rule :
+
+                - HTTP TCP 80 0.0.0.0/0,::/0
+
+    LAUNCH , Select an existing key pair or create a new key pair (Type RSA)
+
+        - Download key pair file and save it.
+
+    Go to instances :
+
+        - My First | Instance | Instance ID | Instace State | Instance Type | Status check.
