added EC2 Instance Types - Genral Purpose

--- a/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
+++ b/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
@@ -95,3 +95,29 @@ NOTE:
     Go to instances :
 
         - My First | Instance | Instance ID | Instace State | Instance Type | Status check.
+
+    Just copy and paste the public IPv4 address.
+
+# **EC2 INSTANCE TYPES - OVERVIEW**
+
+1.  You can use different types of EC2 instances that are optimised for different use cases.
+2.  AWS has the following naming convention:
+
+                    - m5.2xlarge
+
+3.  m : instance class
+4.  5 : generation (AWS improves them over time)
+5.  2xlarge : size within the instance class
+
+NOTE: **General Purpose, Compute Optimized, Memory Optimized, Accelerated Computing, Storage Optimized, Instance Features, Measuring Instance, Performance.**
+
+# **EC2 Instance Types - General Purpose**
+
+1.  Great for a diversity of workloads such as web servers or code repositories.
+2.  Balance between
+
+                    - Compute
+                    - Memory
+                    - Networking
+
+3.  In the course, we will be using the t2.micro which is a General Purpose EC2 instance.
