added Security groups good to know

--- a/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
+++ b/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
@@ -121,3 +121,60 @@ NOTE: **General Purpose, Compute Optimized, Memory Optimized, Accelerated Comput
                     - Networking
 
 3.  In the course, we will be using the t2.micro which is a General Purpose EC2 instance.
+
+**EC2 INSTANCE TYPES - COMPUTE OPTIMIZED**
+
+1.  Great for compute-intensive tasks that require high performance processors:
+
+NOTE: Compute Optimized Instances are ideal for compute bound
+
+                    - Batch processing workloads
+                    - Media transcoding
+                    - High performance web servers
+                    - High performance computing (HPC)
+                    - Scientific modeling & machine learning
+                    - Dedicated gaming servers
+
+**EC2 INSTANCE TYPES - STORAGE OPTIMIZED**
+
+1. Great for storage-intensive tasks that require high, sequential read and write access to large data sets on local storage.
+
+2. Use cases : High frequency online transaction processing (OLTP) systems
+3. Realational & NoSQL databases
+4. Cache for in-memory databases (for example, Redis)
+5. Data warehousing applications
+6. Distributed file systems
+
+**INTRODUCTION TO SECURITY GROUPS**
+
+1. Security Groups are the fundamental of network security in AWS.
+2. They control how traffic is allowed into or out of our EC2 instances.
+3. Security groups only contain **allow** rules
+4. Security groups rules can reference by IP or by security group.
+
+```
+    Inbound Traffic
+www ========>         SECURITY GROUP -------- EC2 INSTANCE
+    Outbound Traffic
+```
+
+**SECURITY GROUPS DEEPER DIVE**
+
+1.  Security groups are acting as a "firewall" on EC2 Instances.
+2.  They regulate :
+
+          - Access to Ports
+          - Authorise IP ranges - IPv4 and IPv6
+          - Control on inbound network (From other to the instance)
+          - Control of outbound network (from the instance to other)
+
+**SECURITY GROUPS GOOD TO KNOW**
+
+1. Can be attached to multiple instances.
+2. Locked down to a region /VPC combination.
+3. Does live "outside" the EC2- if traffic is blocked the EC2 instance won't see it.
+4. It's good to maintain one separate security group for SSH access.
+5. If your application is not accessible (time out), then it's a security group issue.
+6. If your application gives a "connection refused" error, then it's an application error or it's not launched.
+7. All inbound traffic is blocked by default
+8. All outbound traffic is authorised by defaul.
