added classic ports to know

--- a/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
+++ b/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
@@ -178,3 +178,22 @@ www ========>         SECURITY GROUP -------- EC2 INSTANCE
 6. If your application gives a "connection refused" error, then it's an application error or it's not launched.
 7. All inbound traffic is blocked by default
 8. All outbound traffic is authorised by defaul.
+
+**Referencing other security groups Diagram**
+
+NOTE: So we have an EC2 instance, and it has a security group, what I call group number one.
+And the inbound rules is basically saying. I'm authorizing security group number on inbound and security
+group number two.
+
+If we launch another EC2 instance and it has security group two attached to it, well by using the security group (indistinct) rule that we just set up.
+
+Basically allow our EC2 instance to go connect straight on the port we decided onto our frist EC1 instance.
+
+**CLASIC PORTS TO KNOW**
+
+1. 22 = SSH (Secure Shell) - log into a Linux instance.
+2. 21 = FTP (File Transfer Protocol) - upload files into a file share.
+3. 22 = SFTP (Secure File Transfer Protocol ) - upload files using SSH.
+4. 80 = HTTP (Access unsecured websites)
+5. 443 = HTTPS (Access secured websites)
+6. 3389 = RDP (Remote Desktop Protocol) log into a windows instance.
