added SSH Summary table

--- a/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
+++ b/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
@@ -197,3 +197,15 @@ Basically allow our EC2 instance to go connect straight on the port we decided o
 4. 80 = HTTP (Access unsecured websites)
 5. 443 = HTTPS (Access secured websites)
 6. 3389 = RDP (Remote Desktop Protocol) log into a windows instance.
+
+# **SSH SUMMARY TABLE / How do you connect inside of your servers to perform some maintenance or action**
+
+The SSH = Is a command line interface utility.
+
+1. For **linux and MAC** server we can use **SSH** = to do a secure shell into our servers.
+
+2. For windows < 10 = **Putty**
+
+3. windows >= 10 = **SSH** and **Putty**
+
+4. Mac, linux, windows < 10 and Windows >= 10 : **SSH, Putty, EC2 Instance Connect.**
