added How to SSH into your WC2 instance

--- a/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
+++ b/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
@@ -209,3 +209,44 @@ The SSH = Is a command line interface utility.
 3. windows >= 10 = **SSH** and **Putty**
 
 4. Mac, linux, windows < 10 and Windows >= 10 : **SSH, Putty, EC2 Instance Connect.**
+
+# **HOW TO SSH INTO YOUR EC2 INSTANCE**
+
+Linux / Mac OS x
+
+1. We'll learn how to SSH into your EC2 instance using Linux / Mac.
+2. SSH is one of the most important function. It allows you to control a remote machine, all using the command line.
+
+**STEPS**
+
+1.  INSTANCES
+
+          - At the bottom we have Public DNS and IPv4
+          - The IPv4 is basically how I can coonect from my computer over the web to this instance and this is why we have a public IP, so 35-180-100-144.
+
+          - Open your terminal and =
+          -NOTE: Ec2-user is basically the Linux user into our Amazon Linux machine, and @ basically defines the IP.
+
+               - ssh ec2-user@35.180.100.144
+               - yes, but error because the key is missing.
+               - Check for the EC2Tutorial.pem FILE.
+               - ssh -i EC2Tutorial.pem ec2-user@35.180.100.144
+
+    //IMPORTANT:**- WARNING : UNPROTECTED PRIVATE KEY FILE!** TEST QUESTION.
+
+               - Permission 0644 for 'EC2Tutorial.pem' are too open.
+               - It is required that your private key files are NOT accessible by others.
+               - This private key will be ignored
+               - Load key "EC2Tutorial.pem": bad permissions
+               - Permission denied
+
+               -**To fix this** =  chmod 0400 EC2Tutorial.pem
+
+               -Know if you run again =
+                    - ssh -i EC2Tutorial.pem ex2-user@35.180.100.144
+
+               - AMAZON Linux 2 AMI ======> we are in the machine!!
+
+               - If we right = whoami ===> ec2-user
+
+
