added EC2 DEDICATED HOSTS

--- a/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
+++ b/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
@@ -326,10 +326,37 @@ STEP4 = Connect
           - Can change the EC2 instance type.
           - Up to 54% discount.
 
-
-
 7.  **Scheduled Reserved Instances**
 
           - Launch within time window you reserve
           - When you require a fraction of day / week / month
           - Still commitment over | to 3 years.
+
+**EC2 SPOT INSTANCES**
+
+          - Useful for workloads that are resilient to failure.
+               - Batch Jobs
+               - Data Analysis
+               - Image processing
+               - Any Distributed workloads
+               - Workloads with a flexible start and end time.
+
+          - Not suitable for critical jobs or databases.
+
+**EC2 DEDICATED HOSTS**
+IMPORTANT: QUESTION EXAM :
+
+          -An amazon EC2 DEDICATED HOST IS A PHYSICAL SERVER WITH EC2 INSTANCE
+          - capacity fully dedicated to your use. Dedicated Hosts can help you address
+          -COMPLIANCE REQUIREMENTS and reduce cost by allowing you to USE YOUR EXISTING SERVER -BOUND SOFTWARE LICENSES.
+
+          1. Allocated for your account for 3 year period reservation.
+          2. More expensive.
+          3. Useful for software that have complicated licensing model (BYOL-Bring Your Own License).
+          4. Or for companies that have strong regulatory or compliance needs.
+
+**EC2 DEDICATED INSTANCES**
+
+          - Instances running on hardware that's dedicated to you.
+          - May share hardware with other instances in same account.
+          - No control over instance placement (can move hardware after stop/ start).
