--- a/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
+++ b/AWS-certified-Cloud-Practicioner/03.EC2-ElasticComputeCloud.md
@@ -360,3 +360,17 @@ IMPORTANT: QUESTION EXAM :
           - Instances running on hardware that's dedicated to you.
           - May share hardware with other instances in same account.
           - No control over instance placement (can move hardware after stop/ start).
+
+# **SHARED RESPONSIBILITY MODEL FOR EC2**
+
+          - AWS =
+               - Infrastructure (global network security).
+               - Isolation on physical hosts.
+               - Replacing faulty hardware.
+               - Compliance validation.
+          - USER =
+               - Security Groups rules.
+               - Operating - system patches and updates.
+               - Software and utilities installed on the EC2 instance.
+               - IAM Roles asigned to EC2 & IAM user access management.
+               - Data security on your instance.
