added CLI images how to configure a CLI in the terminal

--- a/AWS-certified-Cloud-Practitioner/subjects/02.IAM.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/02.IAM.md
@@ -134,14 +134,34 @@ Because, we want to allow them to use our AWS accounts and to allow them to do s
 aws, s3, cp, and so on, this is what we call the CLI.
 In this example we are using the CLI because we start every command by the word AWS.
 
-````
+```
 => ~ aws s3 cp myfile.txt s3://ccp-mybucket/myfile.txt
 upload: ./myfile.txt to s3://ccp-mybucket/myfile.txt
 
       => ~ aws s3 ls s3://ccp-mybucket
       2021-05-14 03:22:52               0 myfile.txt
       => ~
-    ```
+```
+
+![Drag Racing](images/CLI_CONFIGURATION.png)
+
+This will list all the user into the account.
+The result is going to be :
+
+```
+{
+   "Users": [
+      {
+         "Path": "/",
+         "Username": "stephane",
+         "UserId": "code....."
+         "Arn": "arn......"
+         "CreateDate": "2020-05-27...."
+         "PasswordLastUsed": "2020-05-27....."
+      }
+   ]
+}
+```
 
     **What's the AWS SDK?**
 
@@ -227,4 +247,7 @@ And together, once the EC2 instance is trying to access some information from AW
 - AWS SDK : manage your AWS services using a programming language.
 - Access Keys: access AWS using the CLI or SDK.
 - Audit: IAM Credential Reports & IAM Access Advisor.
-````
+
+```
+
+```
