added AWS CloudShell

--- a/AWS-certified-Cloud-Practitioner/subjects/02.IAM.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/02.IAM.md
@@ -176,6 +176,19 @@ The result is going to be :
 
 NOTE: Alternative for using the terminal to issue commands against AWS. And is using cloud shell.
 
+      //NOTE: **CLOUD SHELL**
+
+      Currently, AWS CloudShell is available in the following AWS Regions:
+
+      - US EAST (OHIO)
+      - US EAST (N.VIRGINIA)
+      - US WEST (OREGON)
+      - ASIA PACIFIC (MUMBAI)
+      - ASIA PACIFIC (SYDNEY)
+      - ASIA PACIFIC (TOKYO)
+      - EUROPE (FRANKFURT)
+      - EUROPE (IRELAND)
+
      **CLOUD SHELL** = It's a terminal in the cloud of AWS.
      1. The good thing about using the CLI, for example:
 
