added Cloud Shell change the preferences

--- a/AWS-certified-Cloud-Practitioner/subjects/02.IAM.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/02.IAM.md
@@ -190,20 +190,29 @@ NOTE: Alternative for using the terminal to issue commands against AWS. And is u
       - EUROPE (IRELAND)
 
      **CLOUD SHELL** = It's a terminal in the cloud of AWS.
-     1. The good thing about using the CLI, for example:
+
+![Drag Racing](images/CLOUD_SHELL.png)
+
+    - The good thing about using the CLI, for example:
 
         aws iam list-users
 
-        this returns for yoy an API call.
-     2. Full repository.
+        this returns for you an API call using the management is region arguments, but in cloud shell the default region is
+        going to be your current region.
 
-6. **IAM ROLES FOR SERVICES**
+    - Full repository. (If you do : echo "test" > demo.txt) this is going to create a test file that contains the word "test".
+    In case you need to restart, this file is going to stick the files.
 
-   - Some AWS service will need to perform actions on your behalf.
-   - To do so, we will assign **Permissions** to AWS services with **IAM Roles**.
-   - Common roles: EC2 Instance Roles.
-   - Lambda Function Roles.
-   - Roles for CloudFormation.
+    -You can change the preferences like:
+      - Font Size, AWS CloudShell theme, Select to enable options.
+
+3.  **IAM ROLES FOR SERVICES**
+
+    - Some AWS service will need to perform actions on your behalf.
+    - To do so, we will assign **Permissions** to AWS services with **IAM Roles**.
+    - Common roles: EC2 Instance Roles.
+    - Lambda Function Roles.
+    - Roles for CloudFormation.
 
 **For example** - We are going to create throughout this course, an EC2 instance, and EC2 Instance is just like a virtual server. But this EC2 instance may want to perform some actions on AWS, and to do so,
 we need to give permissions to our EC2 Instance.
