added IAM Images

--- a/AWS-certified-Cloud-Practitioner/subjects/02.IAM.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/02.IAM.md
@@ -206,7 +206,7 @@ NOTE: Alternative for using the terminal to issue commands against AWS. And is u
     -You can change the preferences like:
       - Font Size, AWS CloudShell theme, Select to enable options.
 
-3.  **IAM ROLES FOR SERVICES**
+6.  **IAM ROLES FOR SERVICES**
 
     - Some AWS service will need to perform actions on your behalf.
     - To do so, we will assign **Permissions** to AWS services with **IAM Roles**.
@@ -219,6 +219,16 @@ we need to give permissions to our EC2 Instance.
 
 To do so : We are going to create an IAM Role and together. They are going to make one entity.
 And together, once the EC2 instance is trying to access some information from AWS. then it will use the IAM ROLE and if the permission assigned to the IAM Role is correct, then we're going to get access to the call we're trying to make.
+
+**Common Roles :**
+
+```
+ - EC2 Instance Roles.
+ - Lambda Function Roles.
+ - Roles for CloudFormation.
+```
+
+![Drag Racing](images/IAMROLE.png)
 
 7. **IAM SECURITY TOOLS**
 
