added Cloud computing section question

--- a/AWS-certified-Cloud-Practitioner/subjects/02.IAM.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/02.IAM.md
@@ -254,19 +254,21 @@ And together, once the EC2 instance is trying to access some information from AW
 
 9. **SHARED RESPONSIBILITY MODEL FOR IAM**
 
-   NOTE: **AWS**
+//IMPORTANT:
 
-   - Infrastructure (global network security).
-   - Configuration and vulnerability analysis.
-   - Compliance Validation.
+NOTE: **AWS**
 
-   NOTE: **YOU**
+- Infrastructure (global network security).
+- Configuration and vulnerability analysis.
+- Compliance Validation.
 
-   - Users, Groups, Roles, Policies management and monitoring.
-   - Enable MFA on all accounts.
-   - Rotable all your keys often.
-   - Use IAM tools to apply appropriate permissions.
-   - Analyze access patterns & review permissions.
+NOTE: **YOU**
+
+- Users, Groups, Roles, Policies management and monitoring.
+- Enable MFA on all accounts.
+- Rotable all your keys often.
+- Use IAM tools to apply appropriate permissions.
+- Analyze access patterns & review permissions.
 
 //IMPORTANT: IAM SECTION - SUMMARY
 
