--- a/AWS-certified-Cloud-Practitioner/subjects/03.EC2-ElasticComputeCloud.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/03.EC2-ElasticComputeCloud.md
@@ -25,15 +25,17 @@
 
 # **EC2 User Data**
 
-1. It is posible to bootstrap our instances using an EC2 User Data script.
-2. bootstrapping meas launching commands when a machine starts.
-3. That script is only run once at the instance first start.
+1. It is posible to bootstrap our instances using an **EC2 User Data** script.
+2. **bootstrapping** meas launching commands when a machine starts.
+3. That script is **only run** once at the instance **first start.**
 4. EC2 user data is used to automate boot tasks suchs as:
 
    - Installing Updates.
    - Installing Software.
    - Downloading common files from the internet.
    - Anything you can think of.
+
+![Drag Racing](images/EC2_INSTANCE_TYPES.png)
 
 5. The EC2 User Data Script runs with the root user.
 
@@ -56,9 +58,13 @@ NOTE:
 
          - Amazon Linux (Free tier elegible). ==>  (Select)
 
+![Drag Racing](images/CHOOSE_AMAZON_MACHINE_IMAGE.png)
+
     Step 2 : Choose an Instance Type.
 
          - Select : t2 t2.micro 1 1 EBS only - Low to Moderate Yes.
+
+![Drag Racing](images/CHOOSE_AN_INSTANCE_TYPE.png)
 
     Step 3 : Configure Instance Details.
 
