--- a/AWS-certified-Cloud-Practitioner/subjects/03.EC2-ElasticComputeCloud.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/03.EC2-ElasticComputeCloud.md
@@ -79,13 +79,19 @@ NOTE:
             echo "<h1>Hello World from $(hostoma -f)</h1>">
             /var/www/html/index.html
 
+![Drag Racing](images/CONFIGURE_INSTANCE_DETAILS.png)
+
     Step 4 : Add Storage = how much data's disk is going to be available on our EC2 instance.
 
          - Default parameters.
 
+![Drag Racing](images/ADD_STORAGE.png)
+
     Step 5 : Add Tags
 
          -Name My first Instance
+
+![Drag Racing](images/ADD_TAGS.png)
 
     Step 6 : Configure Security Group
 
@@ -94,15 +100,27 @@ NOTE:
 
                 - HTTP TCP 80 0.0.0.0/0,::/0
 
+![Drag Racing](images/REVIEW_INSTANCE_LAUNCH.png)
+
     LAUNCH , Select an existing key pair or create a new key pair (Type RSA)
 
         - Download key pair file and save it.
+
+![Drag Racing](images/KEY_PAIR.png)
 
     Go to instances :
 
         - My First | Instance | Instance ID | Instace State | Instance Type | Status check.
 
-    Just copy and paste the public IPv4 address.
+    Just copy and paste the public IPv4 address in google.
+    What we get is a response named Hello World from this IP.
+
+    NOTE: The power of the cloud while my instance is running, I'm going to pay for it.
+    And if I stop it, I'm not going to pay for it.
+    And I can terminate my instance at any time I want.
+    I can also request one instance or 100 instances when I want.
+
+![Drag Racing](images/INSTANCES.png)
 
 # **EC2 INSTANCE TYPES - OVERVIEW**
 
@@ -115,7 +133,18 @@ NOTE:
 4.  5 : generation (AWS improves them over time)
 5.  2xlarge : size within the instance class
 
+![Drag Racing](images/INSTANCE_TYPES_EXAMPLE.png)
+
 NOTE: **General Purpose, Compute Optimized, Memory Optimized, Accelerated Computing, Storage Optimized, Instance Features, Measuring Instance, Performance.**
+
+# **How to SSH into your EC2 Instance**
+
+Well, we have our EC2 machine and we launched Amazon Linux two on it, and our machine has a public IP.
+Now we want to access that machine, and so for this, we have a security group, and on it we allow the port 22 of SSH.
+So what's going to happen is that our computer that will access the web through that port 22, it will access the EC2 machine,
+and basically our command line interface is going to be just as if we were inside that machine.
+
+![Drag Racing](images/SSH.png)
 
 # **EC2 Instance Types - General Purpose**
 
@@ -174,6 +203,8 @@ www ========>         SECURITY GROUP -------- EC2 INSTANCE
           - Control on inbound network (From other to the instance)
           - Control of outbound network (from the instance to other)
 
+![Drag Racing](images/SECURITY_GROUPS_DIAGRAM.png)
+
 **SECURITY GROUPS GOOD TO KNOW**
 
 1. Can be attached to multiple instances.
@@ -194,6 +225,8 @@ group number two.
 If we launch another EC2 instance and it has security group two attached to it, well by using the security group (indistinct) rule that we just set up.
 
 Basically allow our EC2 instance to go connect straight on the port we decided onto our frist EC1 instance.
+
+![Drag Racing](images/REFERENCING_SECURITY_GROUPS_DIAGRAM.png)
 
 **CLASIC PORTS TO KNOW**
 
