added images in EC2 lecture

--- a/AWS-certified-Cloud-Practitioner/subjects/03.EC2-ElasticComputeCloud.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/03.EC2-ElasticComputeCloud.md
@@ -146,6 +146,36 @@ and basically our command line interface is going to be just as if we were insid
 
 ![Drag Racing](images/SSH.png)
 
+IMPORTANT: EXAM QUESTION = When you first download a file, the permission is something called 0644, and that's too open,
+and basically the private key can leak !
+so basically because the private key is accessible by others, it will say bad permissions, and it will not allow you to SSH
+into that machine. So to fix this is type : chmod 0400 EC2Tutorial.pem
+
+![Drag Racing](images/SSH_USING_LINUX_MAC.png)
+
+# **How to use EC2 Instance Connect**
+
+This is going to work only with Amazon X2 or Ubuntu.
+The username is going to be EC2 User (ec2-user).
+
+![Drag Racing](images/CONNECT_INSTANCE.png)
+
+# **EC2 INSTANCE ROLES DEMO**
+
+IMPORTANT: Never enter your IAM APA Key, So the access key ID and the secret access key into a EC2 Instance.
+Instead what we have to do is use **IAM Rules**.
+
+So, you need to back to the IAM Roles, and this have one policy name: **IAMReadOnlyAccess**. We need to attach this onto
+our EC2 instance to provide it with credentials.
+
+Go back to instances | Actions | Security | Modify IAM role | Choose the role | and save.
+
+![Drag Racing](images/ATTACH_ROLE_TO_EC2.png)
+
+Then we run the command : aws iam list-users
+
+![Drag Racing](images/IAM_LIST_USERS.png)
+
 # **EC2 Instance Types - General Purpose**
 
 1.  Great for a diversity of workloads such as web servers or code repositories.
@@ -399,6 +429,8 @@ IMPORTANT: QUESTION EXAM :
           - Instances running on hardware that's dedicated to you.
           - May share hardware with other instances in same account.
           - No control over instance placement (can move hardware after stop/ start).
+
+![Drag Racing](images/RIGHT_PURCHASING.png)
 
 # **SHARED RESPONSIBILITY MODEL FOR EC2**
 
