added EBS SNAPSHOTS

--- a/AWS-certified-Cloud-Practitioner/subjects/04.EC2-InstanceStorage.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/04.EC2-InstanceStorage.md
@@ -39,3 +39,55 @@ And the default any other attached EBS Volume is not deleted.
 Because it's disabled by default.
 This can be controlled by the AWS console / AWS CLI
 If you want to preserve the root volume, when an isntance is terminated, for example, to save some data then you can disable delete on termination.
+
+# **EBS HANDS ON**
+
+1. Create Volume = and we can create a volume type of type gp2.
+2. size (GiB)
+3. Availability Zone = Create in one availability zone that is the same of the one where my EC2 instance has been created.
+
+![Drag Racing](images/EBS_HANDSON.png)
+
+4. At the end we have 2 volumes, So one is in use, and this is the root volume of my machine. And the other one is a two gigabyte
+   volume that is currently available.
+5. right click and attach the volume = into our EC2 instance.(because it is in the same availability zone) as our EBS Volume.
+
+![Drag Racing](images/ATTACH_VOLUME.png)
+
+# **EBS SNANPSHOTS**
+
+1. Make a backup (snapshot) of your EBS Volume at a point in time.
+   (The idea is that you will be able to back up the state of it) and even if the EBS volume is terminated later on.
+2. Not necessary to detach volume to do snapshot, but recommended.
+3. Can copy snapshts across AZ or Region.
+
+![Drag Racing](images/EBS_SNAPSHOTS.png)
+
+NOTE: The idea is transfer some of your data in a different region on AWS, to leverage the global infrastructure.
+If we look at US-EAST-1A and we want to transfer an EBS volume to US-EAST-1B the way we do it is that we would habe the EBS
+volume attached to the EC2 instance, and then we would snapshot it. So maybe we would stop the EC2 instance ahead of time.
+to make sure the snapshot is clean, now the EBS shapshots exist in your region and that EBS snapshot can be used to restore a new EBS volume in another availability zone.
+When is done, we can attach the new EBS Volume, to an EC2 instance in US-EAST-1B
+
+# **EBS SNAPSHOTS FEATURES**
+
+1. **EBS SNAPSHOT ARCHIVE**
+   a. Move a snapshot to an "archive tier" that is 75% cheaper.
+   b. Takes within 24 to 72 hours for restoring the archive.
+
+2. **RECYCLE BIN FOR EBS SNAPSHOTS**
+   a. Setup rules to retain deleted snapshots so you can recover them after an accidental deletion.
+   b. Specify retention (from 1 day to 1 year).
+
+**EBS SNAPSHOTS HANDS ON**
+//NOTE:
+
+1. We have this two gigabytes gp2 EBS Volume available to us and we can take a snapshot from it. So if we do actions, we can create a snapshot.
+
+![Drag Racing](images/CREATE_SNAPSHOT.png)
+
+2. Click in snapshot and then you can copy that snapshot in another region, and this can come in very handy in case you want.
+   for example, to have a disaster recovery strategy.
+   To make sure data is back up in another region of AWS.
+3. Another thing is you can recreate a volume from it, in (Create Volume from snapshot).
+4. Archive Snapshot.
