added AMAZON FSX

--- a/AWS-certified-Cloud-Practitioner/subjects/04.EC2-InstanceStorage.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/04.EC2-InstanceStorage.md
@@ -91,3 +91,94 @@ When is done, we can attach the new EBS Volume, to an EC2 instance in US-EAST-1B
    To make sure data is back up in another region of AWS.
 3. Another thing is you can recreate a volume from it, in (Create Volume from snapshot).
 4. Archive Snapshot.
+
+# **AMI OVERVIEW**
+
+1. AMAZON MACHINE IMAGE
+2. AMI are a customization of an EC2 instance.
+   a. You add your own software, configuration, operating system, monitoring...
+   b. Faster boot / configuration time because all your software is pre-packaged.
+
+3. AMI are built for a specific region (and can be copied across regions).
+4. You can launch EC2 instances from :
+   a. a public AMI: AWS provided.
+   b. Your own AMI: you make and maintain them yourself.
+   c. An AWS Marketplace AMI: an AMI someone else made (and potentially sells).
+
+**AMI PROCESS (From an EC2 instance)**
+
+1. Start an EC2 instance and customize it.
+2. Stop the instance (for data integrity).
+3. Build an AMI = this will also create EBS snapshots.
+4. Launch instances from other AMIs.
+
+IMPORTANT:
+
+# **EC2 IMAGE BUILDER**
+
+1. Used to automate the creation of Virtual Machines or container images.
+2. Automate the creation, maintain, validate and test EC2 AMIs.
+3. Can be run on a schedule (weekly, whenever packages are updated, etc...).
+4. Free service (only pay for the underlying resources).
+
+![Drag Racing](images/EC2_IMAGE_BUILDER.png)
+
+# **EC2 INSTANCE STORE**
+
+1. EBS Volumes are network drives with good but "limited" performance.
+2. If you need a high-performance hardware disk, use EC2 instance Store.
+3. Better I/O Performance.
+4. EC2 Instance Store lose their storage if they're stopped (ephemeral).
+5. Good for buffer | Cache | Scratch data | temporary content.
+6. Risk of data loss if hardware fails.
+7. Backups and Replication are your responsability.
+
+# **EFS ELASTIC FILE SYSTEM** (THird type of storage you can attach onto EC2 Instance.)
+
+1. Managed NFS (network file system) that can be mounted on 100s of EC2.
+2. EFS works with Linux EC2 instances in multu-AZ.
+3. Highly available, scalable, expensive, (3x gp2), pay per use, no capacity planning.
+
+![Drag Racing](images/EFS2.png)
+
+# **DIFFRENCES BETWEEN EBS VS EFS**
+
+NOTE: Then the EBS volume can only be attached to one instance in one specific AZ and the EBS volumes are bound to specific availability zones. But if we wanted to move over the EBS volume. from one AZ to another, we could create a snapshot it would
+create an EBS snapshot and then restore that snapshot into a new availability zone.
+and effectively we would've moved the EBS volume over.
+
+NOTE: Now the EFS drive is shared by everything that is mounted to it, we have many instances in Availability zone 1 on one, or
+many instances as well on Anailability Zone 2. At the same time all this instances can mount the same EFS drive. Using a mount target, and they will all see the same files.
+
+So, that makes it a shared file system.
+
+![Drag Racing](images/EBS_VS_EFS.png)
+
+# **EFS INFREQUENT ACCESS (EFS-IA)**
+
+1. Storage class that is cost-optimized for files not accessed every day.
+2. Up to 92% lower cost compared to EFS Standard.
+3. EFS will automatically move your files to EFS-IA based on the last time they were accessed.
+4. Enable EFS-IA with a lifecycle Policy.
+5. Example: move files that are not accessed for 60 days to EFS-IA.
+6. Transparent to the applications accessing EFS.
+
+# **SHARED RESPONSIBILITY MODEL FOR EC2 STORAGE**
+
+![Drag Racing](images/SR_MODEL_EC2_STORAGE.png)
+
+# **AMAZON FSX OVERVIEW**
+
+1. Launch 3rd party high-performance file systems on AWS.
+2. Fully managed service, highly reliable, and scalable Windows native shared file system.
+3. Built on Windows File server.
+4. Supports SMB protocol & Windows NTFS.
+5. Integrated with Microsoft Active Directory.
+6. Can be accessed from AWS or your on-premise infrastructure.
+
+**AMAZON FSx for Lustre**
+
+1. A fully managed, high-performance, scalable file storage for **High Performance Computing(HPC)**
+2. The name Lustre is derived from "Linux" and "cluster".
+3. Machine Learning, Analytics, Video Processing, Financial Modeling...
+4. Scales up to 100s GB/s, millions of IOPS, sub-ms latencies.
