added Aplication Load Balancer

--- a/AWS-certified-Cloud-Practitioner/subjects/04.EC2-InstanceStorage.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/04.EC2-InstanceStorage.md
@@ -182,3 +182,5 @@ So, that makes it a shared file system.
 2. The name Lustre is derived from "Linux" and "cluster".
 3. Machine Learning, Analytics, Video Processing, Financial Modeling...
 4. Scales up to 100s GB/s, millions of IOPS, sub-ms latencies.
+
+![Drag Racing](images/SR_MODEL_EC2_STORAGE.png)
