--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -35,7 +35,7 @@ IMPORTANT:
    d. Not an IP.
    e. Must start with lowercase letter or number.
 
-**AMAZON S2 OVERVIEW - OBJECTS**
+**AMAZON S3 OVERVIEW - OBJECTS**
 
 1. Objects (files) have a **key**.
 2. The **key** is the FULL path:
@@ -46,3 +46,36 @@ IMPORTANT:
    a. s2://my-bucket/my_folder/another_folder/my_file.txt
 4. There's no concept of **"directories"** within buckets (although the UI will trick you to think otherwise).
 5. Just **keys** with very long names that contain slashes ("/).
+
+6. Object values are the content of the body:
+   a. Max object size is 5TB (5000GB)
+   b. If uploading more than 5GB, must use "multi-part upload"
+
+7. Metadata (list of text key / value pairs - system or user metadata).
+8. Tags (Unicode key / value pair - up to 10) - useful for security / lifecycle.
+9. Version ID (if versioning is enabled).
+
+**S3 HANDS ON**
+
+1. Create a bucket (needs to be a unique name).
+2. CHoose a region near to you.
+
+![Drag Racing](images/S3_CREATE.png)
+
+3. UPLOAD OBJECTS
+
+![Drag Racing](images/S3_UPLOAD.png)
+
+4. Click Upload , now the files has been upload.
+
+![Drag Racing](images/S3_UPLOAD_END.png)
+
+5. Click in coffee.jpg ===> YOU CAN SEE THE OBJECT OVERVIEW.
+
+![Drag Racing](images/OBJECTOVERVIEW.png)
+
+**ACTIONS**
+
+NOTE: open object actions = and click in open (You can see the image). ====> **is open into a pre-signed URL** and it contains
+the AWS credentials into the URL.
+But if we click on bucket url the access is denied because we don't have the right to access the objects. So how come this worked in the second tab but not in the third tab. That's because the bucket is not public.
