added S3 Create Folder

--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -72,10 +72,18 @@ IMPORTANT:
 
 5. Click in coffee.jpg ===> YOU CAN SEE THE OBJECT OVERVIEW.
 
-![Drag Racing](images/OBJECTOVERVIEW.png)
+![Drag Racing](images/S3_OBJECTOVERVIEW.png)
 
 **ACTIONS**
 
 NOTE: open object actions = and click in open (You can see the image). ====> **is open into a pre-signed URL** and it contains
 the AWS credentials into the URL.
 But if we click on bucket url the access is denied because we don't have the right to access the objects. So how come this worked in the second tab but not in the third tab. That's because the bucket is not public.
+
+**CREATE A FOLDER**
+
+![Drag Racing](images/S3_CREATEFOLDER.png)
+
+//NOTE: Now we have the coffee.jpg and the images/ folder.
+
+Inside the folder you can upload files
