added S3 Policy and permissions cases

--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -87,3 +87,89 @@ But if we click on bucket url the access is denied because we don't have the rig
 //NOTE: Now we have the coffee.jpg and the images/ folder.
 
 Inside the folder you can upload files
+
+**S3 SECURITY**
+
+1. User based
+   a. IAM Policies - which API calls should be allowed for a specific user from IAM console.
+2. Resource Based.
+   a. Bucket Policies - bucket wide rules from the S3 console - allows cross account.
+   b. Object Access Control List (ACL) - finer grain.
+   c. Bucket Access Control List (ACL) - less common.
+3. NOTE: an IAM principal can access an S3 object if.
+   a. the user IAM Permissions allow it OR the resource policy ALLOWS it.
+   b AND there's no explicit DENY.
+4. Encryption: encrypt objects in Amazon S3 using encryption keys.
+
+**EXAMPLE: PUBLIC ACCESS - USE BUCKET POLICY**
+
+//IMPORTANT: Probably exam question.
+
+**CASE**
+
+```
+        ANONYMOUS WEBSITE VISITOR   ===========>   S3 BUCKET + S3 BUCKET POLICY | ALLOWS PUBLIC ACCESS.
+```
+
+We have an S3 bucket and say, we have someone not using your account.
+This is anonymous worldwide web website visitor and they want to read the files from your S3 bucketS.
+So by default, we saw if we try to read a file using the web browser there was an access denied.
+
+To solve it, we have to attach an S3 bucket policy to our S3 buckets, which is going to allow public access, When this happen our web visitor thanks to the bucket policy, we'll be able to access to files onto our S3 Buckets.
+
+**EXAMPLE: USER ACCESS TO S3 - IAM PERMISSIONS**
+
+//IMPORTANT:
+
+**CASE**
+
+```
+        IAM USER + IAM POLICY   ===========>   S3 BUCKET.
+```
+
+We can just thanks to the IAM policy allow the IAM user to access our S3 buckets.
+
+**EXAMPLE: EC2 INSTANCE ACCESS - USE IAM ROLES**
+
+**CASE**
+
+```
+
+EC2 INSTANCE ROLE | IAM Permissions
+
+EC2 INSTANCE                        ==============> S3 Bucket.
+
+```
+
+**EXAMPLE: ADVANCED: CROSS-ACCOUNT ACCESS- USE BUCKET POLICY**
+
+**CASE**
+
+```
+IAM User Other AWS account       ===================>  S3 Bucket + S3 Bucket policy, Allows Cross-Account.
+
+```
+
+# **S3 BUCKET POLICIES**
+
+![Drag Racing](images/S3_BUCKET_POLICIES.png)
+
+//NOTE: But we cannot use them for public access if we don't disable the security settings .
+
+![Drag Racing](images/S3_BLOCK_PUBLIC_ACCESS.png)
+
+**S3 BUCKET POLICY HANDS**
+
+1.  Go to = permissions.
+2.  Create a public bucket policy.
+3.  Edit public access (BUCKET SETTINGS).
+4.  Edit bucket policy = Policy examples | Policy Generator.
+5.  Policy Generator :
+
+    a. AMAZON RESOURCE NAME (ARN) ====> copy and paste the ARN and add (/\*) at the end.
+
+         NOTE: Actions (GetObject)
+
+         This policy allows the S3 GetObject action on this buckets object.
+
+![Drag Racing](images/S3POLICY.png)
