--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -173,3 +173,25 @@ IAM User Other AWS account       ===================>  S3 Bucket + S3 Bucket pol
          This policy allows the S3 GetObject action on this buckets object.
 
 ![Drag Racing](images/S3POLICY.png)
+
+**S3 WEBSITES**
+
+1. S3 can host static websites and have them accessible on the www
+2. The website URL will be :
+   a. <bucket-name>.s3-website=<AWS-region>.amazonaws.com
+   OR
+   b. <bucket-name>.s3-website.<AWS-region>.amazonaws.com
+
+3. If you get a 403 (Forbidden) error, make sure the bucket policy allows piblic reads!!
+
+**S3 VERSIONING**
+
+1. You can version your files in Amazon s3.
+2. It is enabled at the bucket level.
+3. Same key overwrite wil increment the "version" : 1,2,3.
+4. It is best practice to version your buckets
+   a. Protect against unintended deletes (ability to restore a version).
+   b. Easy roll back to previous version.
+5. NOTES:
+   a. Any file that is not versioned prior to enabling versioning will have version "null".
+   b. Suspending versioning does not delete the previous versions.
