added REPLICATION CRR AND SRR

--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -195,3 +195,27 @@ IAM User Other AWS account       ===================>  S3 Bucket + S3 Bucket pol
 5. NOTES:
    a. Any file that is not versioned prior to enabling versioning will have version "null".
    b. Suspending versioning does not delete the previous versions.
+
+**S3 ACCESS LOG**
+
+1. For audit purpose, you may want to log all access to S3 buckets.
+2. Any request made to S3, from any account, authorized or denied, will be logged into another S3 bucket.
+3. That data can be analyzed using data analysis tools...
+4. Very helpful to come down to the root cause of an issue, or audit usage, view suspicious patterns, etc...
+
+//NOTE: TARGET BUCKET
+
+    s3://stephane-server-access-logging-2020-ccp/logs
+
+![Drag Racing](images/S3_LOGGING.png)
+
+**S3 REPLICATION (CRR & SRR)**
+
+1. Must enable versioning in source and destination.
+2. Cross Region Replication (CRR).
+3. Same Region Replication (SRR).
+4. Buckets can be in differente accounts.
+5. Copying in asynchronous.
+6. Must give proper IAM permissions to S3.
+7. **CRR - USE CASES:** Compliance, lowe latency access, replication across accounts.
+8. **SRR - USE CASES:** Log aggregation, live replication betweeen production and test accounts.
